gearset/main/default/objects/AW0204Obj__c/AW0204Obj__c.object-meta.xml
<CustomObject>
    <label>AW0204Obj</label>
    <nameField>
        <label>AW0204Obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AW0204Objs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>