gearset/main/default/objects/AW0204Obj__c/fields/ANewEmail__c.field-meta.xml
<CustomField>
        <fullName>ANewEmail__c</fullName>
        <label>ANewEmail</label>
        <type>Email</type>
    </CustomField>