gearset/main/default/objects/AW0204Obj__c/fields/AnotherNumber__c.field-meta.xml
<CustomField>
        <fullName>AnotherNumber__c</fullName>
        <label>AnotherNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>