gearset/main/default/objects/AW0204Obj__c/fields/che__c.field-meta.xml
<CustomField>
        <fullName>che__c</fullName>
        <defaultValue>false</defaultValue>
        <label>che</label>
        <type>Checkbox</type>
    </CustomField>