gearset/main/default/objects/AW0204Obj__c/fields/Emiler__c.field-meta.xml
<CustomField>
        <fullName>Emiler__c</fullName>
        <label>Emiler</label>
        <type>Email</type>
    </CustomField>