gearset/main/default/objects/AW0204Obj__c/fields/LooooongTextArea__c.field-meta.xml
<CustomField>
        <fullName>LooooongTextArea__c</fullName>
        <label>LooooongTextArea</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>