gearset/main/default/objects/AW0204Obj__c/fields/SomeDate__c.field-meta.xml
<CustomField>
        <fullName>SomeDate__c</fullName>
        <label>SomeDate</label>
        <type>Date</type>
    </CustomField>