gearset/main/default/objects/AW0204Obj__c/fields/SomeNewNuber__c.field-meta.xml
<CustomField>
        <fullName>SomeNewNuber__c</fullName>
        <label>SomeNewNuber</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>