gearset/main/default/objects/AW0204Obj__c/fields/SomePercent__c.field-meta.xml
<CustomField>
        <fullName>SomePercent__c</fullName>
        <label>SomePercent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>