gearset/main/default/objects/AW0204Obj__c/fields/WolfTime__c.field-meta.xml
<CustomField>
        <fullName>WolfTime__c</fullName>
        <label>WolfTime</label>
        <type>Time</type>
    </CustomField>